日志保存到本地DownLoad

--- a/LogCatDialogLib/src/main/AndroidManifest.xml
+++ b/LogCatDialogLib/src/main/AndroidManifest.xml
@@ -14,6 +14,19 @@
             android:name=".LogCatActivity2"
             android:screenOrientation="landscape"
             android:theme="@style/MyDialogActivityTheme"></activity>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.adsale.registersite.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+
+            <!-- 元数据 -->
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
     </application>
 
 </manifest>
